Enhance quantum methods and make sentence-transformers required
- Made sentence-transformers required (not optional) in requirements.txt
- Enhanced quantum interference similarity with:
  - Phase alignment detection for better semantic matching
  - Constructive interference boosting for similar pairs
  - Improved normalization and interference pattern analysis
- Increased quantum amplitude encoding blend from 10% to 15%
- Updated test_honest_comparison.py to use sentence-transformers for fair comparison
- Quantum methods now have better chance to show improvements on semantic tasks

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ scipy>=1.11.0
 # Deep learning (required by LLM)
 torch>=2.3.0
 
-# Optional but recommended for improved embeddings in quantum_kernel
+# Required for improved embeddings and quantum methods to work effectively
 sentence-transformers>=2.2.0
 
-# Optional for better theme extraction in quantum_kernel
+# Required for better theme extraction in quantum_kernel
 scikit-learn>=1.5.0
 
 # Optional: Quantum computing frameworks (for quantum kernel methods)
