--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,10 @@ imbalanced-learn>=0.11.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
 
+# MLOps & Production (Burkov Machine Learning Engineering)
+fastapi>=0.100.0
+uvicorn>=0.23.0
+
 # Optional: Quantum computing frameworks (for quantum kernel methods)
 # Choose one based on your preference:
 # qiskit>=1.2.0
