Implement Phase 3: Feature Store, Monitoring Dashboard, Model Compression
Phase 3: Nice to Have (Complete)

1. Feature Store (feature_store.py):
   - FeatureStore: Complete feature management
     * Feature storage and retrieval
     * Feature versioning
     * Feature lineage tracking
     * Online/offline feature serving
     * Feature discovery
     * Multiple backends (pickle, HDF5, parquet)
     * Metadata storage

2. Monitoring Dashboard (monitoring_dashboard.py):
   - MonitoringDashboard: Web dashboard for monitoring
     * Real-time metrics visualization
     * Drift detection alerts
     * Performance monitoring
     * Model comparison
     * Alert management
     * WebSocket support for real-time updates
     * FastAPI-based web interface

3. Model Compression (model_compression.py):
   - ModelCompressor: Model compression for deployment
     * Quantization (reduce precision: int8, int16, float16)
     * Pruning (remove unnecessary weights)
     * Knowledge distillation support
     * Size optimization
     * Model size estimation
     * PyTorch and sklearn support

4. Integration:
   - ml_toolbox/compartment4_mlops.py: Added Phase 3 components
     * FeatureStore integration
     * MonitoringDashboard integration
     * ModelCompressor integration
     * Getter methods for all components
     * Component descriptions

5. Examples (examples/phase3_examples.py):
   - Feature Store example
   - Monitoring Dashboard example
   - Model Compression example
   - Complete demonstrations

6. Requirements (requirements.txt):
   - Added Phase 3 dependencies
     * h5py>=3.9.0 (HDF5 support)
     * pyarrow>=14.0.0 (Parquet support)
     * plotly>=5.18.0 (Visualization)
     * websockets>=11.0 (Real-time updates)

All additions:
- Production-ready implementations
- Comprehensive feature management
- Real-time monitoring dashboard
- Model optimization for deployment
- Complete examples

Expected Impact:
- Feature reuse across models (Feature Store)
- Better visibility 

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,12 @@ seaborn>=0.12.0
 # MLOps & Production (Burkov Machine Learning Engineering)
 fastapi>=0.100.0
 uvicorn>=0.23.0
+websockets>=11.0
+
+# Phase 3: Feature Store & Monitoring
+h5py>=3.9.0
+pyarrow>=14.0.0  # For parquet support
+plotly>=5.18.0
 
 # Optional: Quantum computing frameworks (for quantum kernel methods)
 # Choose one based on your preference:
