--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,50 @@
-# Core dependencies for quantum_kernel, ai, and llm
-numpy>=1.26.0
+# ML Toolbox - Complete Requirements
+# Install with: pip install -r requirements.txt
 
-# Scientific computing (required for statistical methods and quantum kernel)
-scipy>=1.11.0
+# Core ML Libraries
+numpy>=1.21.0
+scikit-learn>=1.0.0
+pandas>=1.3.0
 
-# Deep learning (required by LLM and Deep Learning book methods)
-torch>=2.3.0
+# Advanced ML
+imbalanced-learn>=0.8.0
+statsmodels>=0.13.0
+xgboost>=1.5.0
+lightgbm>=3.3.0
 
-# Required for improved embeddings and quantum methods to work effectively
+# Deep Learning (optional but recommended)
+tensorflow>=2.8.0
+torch>=1.11.0
+
+# NLP & Embeddings
 sentence-transformers>=2.2.0
+transformers>=4.20.0
 
-# Machine learning (required for ML evaluation, statistical methods, and quantum kernel)
-scikit-learn>=1.5.0
-
-# Statistical learning (required for Bayesian optimization)
-scikit-optimize>=0.9.0
-
-# Data manipulation
-pandas>=2.0.0
-
-# Time series analysis (ARIMA, time series features)
-statsmodels>=0.14.0
-
-# Interpretability (SHAP, LIME)
-shap>=0.42.0
+# Interpretability
+shap>=0.40.0
 lime>=0.2.0
 
-# Probabilistic models (Bayesian Networks, HMM)
+# Probabilistic Models
 pgmpy>=0.1.19
 hmmlearn>=0.2.7
 
-# Imbalanced learning (SMOTE, etc.)
-imbalanced-learn>=0.11.0
+# System Monitoring
+psutil>=5.9.0
+py-cpuinfo>=8.0.0
+
+# Data Storage
+h5py>=3.7.0
+joblib>=1.1.0
+
+# Web Framework (for learning app)
+flask>=2.2.0
+flask-cors>=3.0.10
 
 # Visualization
-matplotlib>=3.7.0
+matplotlib>=3.5.0
 seaborn>=0.12.0
+plotly>=5.10.0
 
-# MLOps & Production (Burkov Machine Learning Engineering)
-fastapi>=0.100.0
-uvicorn>=0.23.0
-websockets>=11.0
-
-# Phase 3: Feature Store & Monitoring
-h5py>=3.9.0
-pyarrow>=14.0.0  # For parquet support
-plotly>=5.18.0
-
-# Optional: Quantum computing frameworks (for quantum kernel methods)
-# Choose one based on your preference:
-# qiskit>=1.2.0
-# qiskit-machine-learning>=0.7.0  # for built-in QSVM/quantum kernels
-# pennylane>=0.34.0
-# cirq>=1.3.0
-
-# Optional: LLM libraries (if extending LLM functionality)
-# transformers>=4.45.0
-
-# Optional: Development
-# jupyter>=1.0.0
-
-# Testing (required for rigorous tests)
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-xdist>=3.3.0
-pytest-timeout>=2.1.0
-
-# Optional: Full GAM support
-# pygam>=0.9.0
-
-# Optional: Advanced probabilistic methods
-# pymc3>=5.0.0
-# pyro-ppl>=1.8.0
+# Utilities
+tqdm>=4.64.0
+python-dateutil>=2.8.0
